css/style.css
/* ... */
.bg-light {
  background: #f8f9fa !important;
}

.bg-dark {
  background: #191919 !important;
}

.bg-primary {
  background: #ffbd39;
}

.btn {
  cursor: none;
  -webkit-border-radius: 40px;
  -moz-border-radius: 40px;
  -ms-border-radius: 40px;
  border-radius: 40px;
  -webkit-box-shadow: 0px 24px 36px -11px rgba(0, 0, 0, 0.09);
  -moz-box-shadow: 0px 24px 36px -11px rgba(0, 0, 0, 0.09);
  box-shadow: 0px 24px 36px -11px rgba(0, 0, 0, 0.09);
  font-size: 12px;
  text-transform: uppercase;
  letter-spacing: 2px;
  font-weight: 600;
}

.btn:hover,
.btn:active,
.btn:focus {
  outline: none;
}

.btn.btn-primary {
  background: #ffbd39;
  border: 1px solid #ffbd39 !important;
  color: #000000 !important;
}

.btn.btn-primary:hover {
  border: 1px solid #ffbd39 !important;
  background: #ffbd39 !important;
  color: #000000 !important;
}

.btn.btn-primary.btn-outline-primary {
  border: 2px solid #ffbd39 !important;
  background: transparent !important;
  color: #ffbd39 !important;
}

.btn.btn-primary.btn-outline-primary:hover {
  border: 2px solid transparent !important;
  background: #ffbd39 !important;
  color: #fff !important;
}

.btn.btn-secondary {
  background: #a0f669 !important;
  border: 1px solid #a0f669 !important;
  color: #fff !important;
}

.btn.btn-secondary:hover {
  border: 1px solid #a0f669 !important;
  background: transparent !important;
  color: #a0f669 !important;
}

.btn.btn-secondary.btn-outline-primary {
  border: 1px solid #a0f669;
  background: transparent;
  color: #a0f669;
}

.btn.btn-secondary.btn-outline-primary:hover {
  border: 1px solid transparent;
  background: #a0f669;
  color: #fff;
}

.btn.btn-white {
  background: #fff !important;
  border: 1px solid #fff !important;
  color: #000000 !important;
}

.btn.btn-white:hover {
  border: 1px solid #000000;
  background: #fff !important;
  color: #fff;
}

.btn.btn-white.btn-outline-white {
  border: 1px solid rgba(255, 255, 255, 0.5) !important;
  background: transparent !important;
  color: #fff !important;
}

.btn.btn-white.btn-outline-white:hover {
  border: 1px solid transparent;
  background: #ffbd39;
  color: #fff;
}

.ftco-about .img-about {
  width: 100%;
  z-index: 0;
  position: relative;
}

.ftco-about .img-about .img {
  display: block;
  width: 100%;
  position: relative;
  z-index: 1;
}

.ftco-about ul.about-info {
  display: inline-block;
  padding: 0;
  margin: 0;
  width: 100%;
}

.ftco-about ul.about-info li {
  list-style: none;
  margin-bottom: 10px;
}

.ftco-about ul.about-info li span {
  width: calc(100% - 130px);
}

.ftco-about ul.about-info li span:first-child {
  font-weight: 600;
  color: #fff;
  width: 130px;
}

.ftco-about .counter-wrap .text p {
  font-size: 20px;
}

.ftco-about .counter-wrap .text p span {
  font-weight: 400;
  color: #fff;
}

.ftco-about .counter-wrap .text p span.number {
  font-weight: 600;
  color: #ffbd39;
}

.resume-wrap {
  width: 100%;
  margin-bottom: 30px;
  background: rgba(255, 255, 255, 0.1);
  padding: 30px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  -ms-border-radius: 5px;
  border-radius: 5px;
}

.resume-wrap .date {
  font-weight: 900;
  font-size: 26px;
  color: #ffbd39;
}

.resume-wrap h2 {
  font-size: 26px;
}

.resume-wrap .position {
  font-size: 12px;
  font-weight: 600;
  letter-spacing: 3px;
  text-transform: uppercase;
}

.services-1 {
  border-radius: 7px;
  margin-bottom: 40px;
  padding: 2em;
  background: rgba(255, 255, 255, 0.1);
  width: 100%;
  -webkit-box-shadow: 0px 20px 69px -27px rgba(0, 0, 0, 0.17);
  -moz-box-shadow: 0px 20px 69px -27px rgba(0, 0, 0, 0.17);
  box-shadow: 0px 20px 69px -27px rgba(0, 0, 0, 0.17);
}

.services-1 .icon {
  display: block;
  margin-bottom: 30px;
}

.services-1 .icon i {
  font-size: 60px;
  line-height: 1.0;
  color: orange;
}

.services-1 .desc h3 {
  line-height: 1.3;
  font-size: 13px;
  font-weight: 500;
  letter-spacing: 3px;
  text-transform: uppercase;
  position: relative;
  color: #fff;
}

.services-1 .desc h3:after {
  position: absolute;
  bottom: -15px;
  left: 0;
  right: 0;
  content: '';
  width: 30px;
  height: 1px;
  background: orange;
  margin: 0 auto;
}

.services-1 .desc h3 a {
  color: orange;
}

.services-1 .desc h4 {
  font-size: 20px;
  font-weight: 300;
  margin-bottom: 18px;
}

.services-1 .desc span {
  display: block;
  text-transform: uppercase;
  font-size: 12px;
  margin-bottom: 10px;
  color: #ffbd39;
}

.services-1:hover {
  background: orange;
}

.services-1:hover .icon i {
  color: #fff;
}

.services-1:hover h3 {
  color: #000000;
}

.services-1:hover h3:after {
  background: #000000;
}

.progress-wrap {
  width: 100%;
  margin-bottom: 30px;
}

.progress-wrap h3 {
  font-size: 20px;
  margin-bottom: 10px;
  font-weight: 500;
}

.progress {
  height: 10px;
  -webkit-box-shadow: none;
  box-shadow: none;
  background: #1a1a1a;
  overflow: visible;
}

.progress-bar {
  background: #ffbd39;
  -webkit-box-shadow: none;
  box-shadow: none;
  font-size: 12px;
  line-height: 1.2;
  color: #000000;
  font-weight: 600;
  position: relative;
  overflow: visible;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  -ms-border-radius: 2px;
  border-radius: 2px;
}

.progress-bar:after {
  position: absolute;
  top: -2px;
  right: 0;
  width: 34px;
  height: 34px;
  content: '';
  background: #ffbd39;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  -ms-border-radius: 2px;
  border-radius: 2px;
  opacity: 0;
}

.progress-bar span {
  position: absolute;
  top: -38px;
  right: 0;
  font-size: 20px;
  font-weight: 400;
  color: #fff;
}

.ftco-hireme {
  background: #ffbd39;
}

.ftco-hireme h2 {
  color: #fff;
  font-size: 40px;
  font-weight: 900;
}

.ftco-hireme h2 span {
  color: #ffbd39;
}

@media (min-width: 992px) {
  .margin-top {
    margin-top: -70px;
    padding-top: 10em !important;
  }
}

.project {
  width: 100%;
  height: 285px;
  margin-bottom: 30px;
  position: relative;
  z-index: 0;
}

.project.img-2 {
  height: 600px;
}
/* ... */

